--- a/01. PARTIE LEGISLATIVE/Article L2111-3 - 23084742.md
+++ b/01. PARTIE LEGISLATIVE/Article L2111-3 - 23084742.md
@@ -1,24 +1,108 @@
 # Article L2111-3
 
-Par dérogation aux dispositions des articles L. 1241-1 et L. 1241-2, un décret en Conseil d'Etat définit les modalités
-d'établissement par l'Etat d'une liaison ferroviaire express directe dédiée au transport de personnes entre l'aéroport de
-Roissy-Charles-de-Gaulle et Paris. 
+I.-L'Etat attribue à une société détenue majoritairement par SNCF Réseau et Aéroports de Paris, dans les conditions précisées
+ci-après, une concession de travaux ayant pour objet la conception, le financement, la réalisation ou l'aménagement,
+l'exploitation ainsi que la maintenance, comprenant l'entretien et le renouvellement, d'une infrastructure ferroviaire
+destinée à l'exploitation d'un service de transport de personnes entre Paris et l'aéroport Paris-Charles de Gaulle. 
 
-Ce décret fixe notamment les modalités de désignation des exploitants, les conditions générales de financement, de
-réalisation et d'exploitation de la liaison ainsi que les règles tarifaires propres à celle-ci, l'exploitation du service de
-transport lui-même étant assurée dans les conditions prévues par l'article L. 2141-1. Il prévoit que la mission confiée au
-cocontractant dans le cadre prévu par l'article L. 2111-12 peut être étendue à la responsabilité de l'organisation et du
-fonctionnement de l'ensemble du service rendu aux personnes utilisant la liaison. 
+Une partie minoritaire du capital social de la société peut être ouverte aux tiers. 
 
-Sans préjudice des indemnités qui viendraient, le cas échéant, à être dues au délégataire au titre des stipulations du
-contrat de délégation de service public, rédigées dans le respect des principes généraux du droit applicables à ces contrats,
-la construction de cette liaison ferroviaire ne donne lieu à aucune subvention de l'Etat.
+II.-Cette infrastructure ferroviaire est composée de sections existantes, de sections nouvelles assurant la liaison avec les
+réseaux d'accès aux deux gares d'extrémité de Paris-Est et de l'aéroport Paris-Charles de Gaulle ainsi que d'installations
+situées dans l'emprise de ces gares. 
+
+Les sections nouvelles sont incorporées au réseau ferré national à compter de leur mise en exploitation. 
+
+III.-Sont exclues de la concession les missions suivantes, assurées par SNCF Réseau au titre de l'article L. 2111-9 : 
+
+1° Les missions d'accès à l'infrastructure, comprenant la répartition des capacités et la tarification, sur les sections
+existantes et sur la section nouvelle assurant la liaison avec la gare de Paris-Est ; 
+
+2° La mission de gestion opérationnelle des circulations sur l'ensemble de l'infrastructure ; 
+
+3° La mission de maintenance, comprenant l'entretien et le renouvellement, des sections existantes et de la section nouvelle
+assurant la liaison avec la gare de Paris-Est ; 
+
+4° La mission de maintenance, comprenant l'entretien et le renouvellement, des équipements ferroviaires installés sur ces
+sections. 
+
+Est également exclue de la concession la mission de gestion des installations situées dans les deux gares d'extrémité. 
+
+IV.-Le contrat de concession de travaux conclu entre l'Etat et la société fixe les conditions selon lesquelles celle-ci
+exerce ces missions, notamment : 
+
+1° La durée du contrat, qui est déterminée en fonction du montant et de la durée normale d'amortissement des investissements
+demandés à la société ; 
+
+2° Les obligations de la société de nature à garantir le respect des impératifs de sécurité et de continuité du service
+public ; 
+
+3° Les conditions dans lesquelles une partie minoritaire du capital social de la société peut être ouverte aux tiers ; 
+
+4° Les modalités de partage des risques entre l'Etat et la société. 
+
+Ce contrat est approuvé par décret en Conseil d'Etat. 
+
+V.-Pour l'exercice des missions de conception et de réalisation ou d'aménagement de l'infrastructure ferroviaire mentionnée
+au I, la société confie : 
+
+1° A SNCF Réseau : 
+
+a) La maîtrise d'ouvrage des travaux d'aménagement des sections existantes ; 
+
+b) La maîtrise d'ouvrage des travaux d'installation des équipements ferroviaires sur l'ensemble de l'infrastructure ; 
+
+2° A SNCF Mobilités : 
+
+a) La maîtrise d'ouvrage des travaux d'aménagement de la gare de Paris-Est ; 
+
+b) La maîtrise d'ouvrage des travaux et des aménagements des volumes gérés par elle dans la gare de l'aéroport Paris-Charles
+de Gaulle ; 
+
+3° A Aéroports de Paris : 
+
+a) La maîtrise d'ouvrage des travaux nécessaires à la réalisation de la partie de la section nouvelle située dans l'emprise
+de l'aéroport Paris-Charles de Gaulle ; 
+
+b) La maîtrise d'ouvrage des travaux et des aménagements concernant les volumes qui lui appartiennent dans la gare de
+l'aéroport Paris-Charles de Gaulle. 
+
+VI.-La société, qui a la qualité de gestionnaire d'infrastructure, exerce les missions d'accès à l'infrastructure, comprenant
+la répartition des capacités et la tarification, sur la section nouvelle assurant la liaison avec la gare de l'aéroport
+Paris-Charles de Gaulle. 
+
+Le produit des redevances liées à la section nouvelle assurant la liaison avec la gare de l'aéroport Paris-Charles de Gaulle
+vise à couvrir, conjointement avec les autres ressources de la société et notamment celles résultant de la répartition du
+produit de la tarification sur l'ensemble de la ligne ferroviaire fixée par la convention mentionnée au premier alinéa du
+VIII, les dépenses de toute nature supportées par la société pour l'exercice de l'ensemble des missions qui lui sont confiées
+par la concession de travaux, ainsi que l'amortissement et la juste rémunération des capitaux qu'elle a investis. 
+
+VII.-Pour l'exercice de la mission de maintenance, comprenant l'entretien et le renouvellement, de l'infrastructure
+ferroviaire mentionnée au I, la société confie : 
+
+1° A SNCF Réseau, la maintenance des équipements ferroviaires installés sur la section nouvelle assurant la liaison avec la
+gare de l'aéroport Paris-Charles de Gaulle ; 
+
+2° A SNCF Mobilités, la maintenance des aménagements de la gare de Paris-Est ainsi que celle des travaux et aménagement de la
+gare située dans l'emprise de l'aéroport Paris-Charles de Gaulle, mentionnés au 2° du V ; 
+
+3° A Aéroports de Paris, la maintenance des aménagements de la gare de l'aéroport Paris-Charles de Gaulle, mentionnés au b du
+3° du V ; 
+
+4° A Aéroports de Paris, la maintenance de la partie de la section nouvelle située dans l'emprise de l'aéroport Paris-Charles
+de Gaulle. 
+
+VIII.-La société mentionnée au I et SNCF Réseau concluent une convention en vue de coordonner la répartition des capacités et
+de répartir le produit de la tarification sur l'ensemble de l'infrastructure ferroviaire, dans le cadre de leurs attributions
+respectives telles qu'elles résultent des dispositions du III et du VI, de manière à assurer le fonctionnement efficace des
+services ferroviaires. 
+
+La société mentionnée au I et SNCF Réseau concluent une convention en vue de coordonner leurs interventions respectives, au
+titre du III et du VII, en matière de maintenance. 
+
+IX.-Un décret en Conseil d'Etat précise les conditions d'application du présent article.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°2006-10 du 5 janvier 2006 - art. 22 (Ab), alinéa 12, paragraphe V
 
 	**Cité par**:
 
@@ -28,12 +112,14 @@ la construction de cette liaison ferroviaire ne donne lieu à aucune subvention 
 	  - Ordonnance n°2016-157 du 18 février 2016 - art. 5 (V)
 	  - Code des transports - art. L2111-3-1 (V)
 
-	**Cite**:
-
-	  - Code des transports - art. L1241-1 (V)
-	  - Code des transports - art. L2111-12 (V)
-	  - Code des transports - art. L2141-1 (V)
-
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2016-157 du 18 février 2016 - art. 1
+
+	**Cite**:
+
+	  - Code des transports - art. L2111-9
