--- a/02. PARTIE REGLEMENTAIRE/Article D4411-6 - 27233813.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D4411-6 - 27233813.md
@@ -1,26 +1,17 @@
 # Article D4411-6
 
 Les données personnelles nécessaires à l'exploitation des services d'information fluviale sont traitées conformément aux
-règles communautaires et nationales protégeant les libertés et les droits fondamentaux des individus, notamment par les lois
-n° 78-17 du 6 janvier 1978 relative à l'informatique, aux fichiers et aux libertés et n° 78-753 du 17 juillet 1978 portant
-diverses mesures d'amélioration des relations entre l'administration et le public et diverses dispositions d'ordre
-administratif, social et fiscal.
+règles communautaires et nationales protégeant les libertés et les droits fondamentaux des individus, notamment par la loi n°
+78-17 du 6 janvier 1978 relative à l'informatique, aux fichiers et aux libertés et le livre III du code des relations entre
+le public et l'administration.
 
 **Liens relatifs à cet article**
 
 	**Cite**:
 
 	  - Loi n°78-17 du 6 janvier 1978 (V)
-	  - Loi n°78-753 du 17 juillet 1978 (V)
+	  - Code des relations entre le public et l'adminis... - art. L300-1 (V)
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Décret n°2008-168 du 22 février 2008 - art. 6 (Ab)
-
-	**Codifié par**:
-
-	  - Décret n°2013-253 du 25 mars 2013 (V)
-
-	**Créé par**:
-
-	  - Décret n°2013-253 du 25 mars 2013 - art.
+	  - ORDONNANCE n°2015-1341 du 23 octobre 2015 - art. 3 (V)
