--- a/02. PARTIE REGLEMENTAIRE/Article R1241-24 - 28996505.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1241-24 - 28996505.md
@@ -1,8 +1,8 @@
 # Article R1241-24
 
 Des conventions pluriannuelles passées entre le Syndicat des transports d'Ile-de-France et les transporteurs autres que la
-Régie autonome des transports parisiens et la Société nationale des chemins de fer français précisent la consistance et la
-qualité du service attendu des transporteurs ainsi que les conditions d'exploitation de leurs lignes ou de leurs réseaux.
+Régie autonome des transports parisiens et       SNCF Mobilités précisent la consistance et la qualité du service attendu des
+transporteurs ainsi que les conditions d'exploitation de leurs lignes ou de leurs réseaux. 
 
 Elles fixent, en outre, les contributions apportées par le Syndicat des transports d'Ile-de-France aux transporteurs compte
 tenu des engagements tarifaires qui leur sont applicables ainsi que de la réalisation des objectifs de qualité du service
@@ -10,14 +10,10 @@ assignés.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°59-157 du 7 janvier 1959 - art. 6 bis (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2016-327 du 17 mars 2016 - art. 24
