--- a/02. PARTIE REGLEMENTAIRE/Article R1241-28 - 28996513.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1241-28 - 28996513.md
@@ -1,18 +1,14 @@
 # Article R1241-28
 
-La Régie autonome des transports parisiens et la Société nationale des chemins de fer français sont remboursées des pertes de
-recettes résultant pour elles des tarifs réduits qui leur sont imposés.
+La Régie autonome des transports parisiens et       SNCF Mobilités sont remboursées des pertes de recettes résultant pour
+elles des tarifs réduits qui leur sont imposés.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°59-157 du 7 janvier 1959 - art. 7 bis (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2016-327 du 17 mars 2016 - art. 24
