--- a/02. PARTIE REGLEMENTAIRE/Article R1241-32 - 28996521.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1241-32 - 28996521.md
@@ -2,7 +2,7 @@
 
 Le Syndicat des transports d'Ile-de-France peut assurer la maîtrise d'ouvrage ou désigner le ou les maîtres d'ouvrage des
 projets d'infrastructures nouvelles destinées au transport public de personnes, d'extension et d'aménagement de lignes
-existantes, sans préjudice des compétences reconnues à l'établissement public Réseau ferré de France. 
+existantes, sans préjudice des compétences reconnues à l'établissement public   SNCF Réseau. 
 
 Le syndicat peut être bénéficiaire des emplacements réservés figurant dans un plan local d'urbanisme et mentionnés à
 l'article L. 151-41 du code de l'urbanisme. 
@@ -17,7 +17,7 @@ Pour l'exercice de ses missions, le syndicat peut bénéficier de la procédure 
 
 	**Modifié par**:
 
-	  - Décret n°2015-1783 du 28 décembre 2015 - art. 9
+	  - Décret n°2016-327 du 17 mars 2016 - art. 24
 
 	**Cite**:
 
