--- a/02. PARTIE REGLEMENTAIRE/Article R1241-25 - 28996507.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1241-25 - 28996507.md
@@ -1,25 +1,21 @@
 # Article R1241-25
 
 En l'absence de la convention prévue par les articles R. 1241-22 et R. 1241-23, le Syndicat des transports d'Ile-de-France
-alloue à la Régie autonome des transports parisiens et à la Société nationale des chemins de fer français une contribution
-forfaitaire provisionnelle déterminée en tenant compte notamment de celle versée l'année précédente et de l'évolution de la
-consistance du service décidée par le Syndicat des transports d'Ile-de-France. Cette contribution est versée mensuellement,
-sur la base du douzième de la somme allouée.
+alloue à la Régie autonome des transports parisiens et à       SNCF Mobilités une contribution forfaitaire provisionnelle
+déterminée en tenant compte notamment de celle versée l'année précédente et de l'évolution de la consistance du service
+décidée par le Syndicat des transports d'Ile-de-France. Cette contribution est versée mensuellement, sur la base du douzième
+de la somme allouée.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°59-157 du 7 janvier 1959 - art. 6 ter (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2016-327 du 17 mars 2016 - art. 24
 
 	**Cite**:
 
-	  - Code des transports - art. R1241-22 (V)
+	  - Code des transports - art. R1241-22
