--- a/01. PARTIE LEGISLATIVE/Article L1632-1 - 23085083.md
+++ b/01. PARTIE LEGISLATIVE/Article L1632-1 - 23085083.md
@@ -4,17 +4,20 @@ Les autorités organisatrices de transports collectifs de personnes et le Syndic
 chacun pour ce qui le concerne, dans des conditions fixées par décret en Conseil d'Etat, aux actions de prévention de la
 délinquance et de sécurisation des personnels et des usagers dans ces transports.
 
+Les atteintes à caractère sexiste dans les transports publics collectifs de voyageurs font l'objet d'un bilan annuel transmis
+au Défenseur des droits, à l'Observatoire national des violences faites aux femmes et au Haut Conseil à l'égalité entre les
+femmes et les hommes. Ce bilan énonce les actions entreprises pour prévenir et recenser ces atteintes.
+
 **Liens relatifs à cet article**
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
-
-	**Anciens textes**:
-
-	  - Ordonnance n°59-151 du 7 janvier 1959 - art. 1 (VT), alinéa 4, phrase 4, paragraphe II
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 13-3 (VT), art. 21-1 (VT), alinéas 4, phrase 2 et 5, ecqc le décret
+	  - Loi n°2016-339 du 22 mars 2016 - art. 22
 
 	**Cité par**:
 
 	  - Code de la sécurité intérieure - art. L261-1 (VD)
+
+	**Codifié par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
