--- a/01. PARTIE LEGISLATIVE/Article L2241-1 - 23084158.md
+++ b/01. PARTIE LEGISLATIVE/Article L2241-1 - 23084158.md
@@ -1,8 +1,8 @@
 # Article L2241-1
 
-I. ― Sont chargés de constater par procès-verbaux les infractions aux dispositions du présent titre ainsi que les
+I. - Sont chargés de constater par procès-verbaux les infractions aux dispositions du présent titre ainsi que les
 contraventions prévues par les règlements relatifs à la police ou à la sûreté du transport et à la sécurité de l'exploitation
-des systèmes de transport ferroviaire ou guidé, outre les officiers de police judiciaire : 
+des systèmes de transport ferroviaire ou guidé, outre les officiers et les agents de police judiciaire : 
 
 1° Les fonctionnaires ou agents de l'Etat assermentés missionnés à cette fin et placés sous l'autorité du ministre chargé des
 transports ; 
@@ -13,12 +13,14 @@ transports ;
 
 4° Les agents assermentés de l'exploitant du service de transport ; 
 
-5° Les agents assermentés missionnés du service interne de sécurité de la SNCF mentionné à l'article L. 2251-1-1. 
+5° Les agents assermentés missionnés du service interne de sécurité de la SNCF mentionné à l'article L. 2251-1-1 ;
 
-II. ― Les contraventions aux dispositions des arrêtés de l'autorité administrative compétente de l'Etat concernant la
+6° Les agents de police municipale. 
+
+II. - Les contraventions aux dispositions des arrêtés de l'autorité administrative compétente de l'Etat concernant la
 circulation, l'arrêt et le stationnement des véhicules dans les cours des gares sont constatées également par : 
 
-1° Les agents de police judiciaire ; 
+1° (Abrogé) 
 
 2° Les agents de police judiciaire adjoints ; 
 
@@ -31,10 +33,6 @@ circulation, l'arrêt et le stationnement des véhicules dans les cours des gare
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
-
-	**Modifié par**:
-
-	  - Loi n°2015-990 du 6 août 2015 - art. 20
 
 	**Cité par**:
 
@@ -59,7 +57,12 @@ circulation, l'arrêt et le stationnement des véhicules dans les cours des gare
 	  - Code des transports - art. R3116-34 (V)
 	  - Code des transports - art. R3116-36 (V)
 
+	**Modifié par**:
+
+	  - Loi n°2016-339 du 22 mars 2016 - art. 20
+	  - Loi n°2016-339 du 22 mars 2016 - art. 6
+
 	**Cite**:
 
-	  - Code de la route. - art. L130-4 (V)
+	  - Code de la route. - art. L130-4
 	  - Code des transports - art. L2251-1-1
