--- a/01. PARTIE LEGISLATIVE/Article L2241-2 - 23084154.md
+++ b/01. PARTIE LEGISLATIVE/Article L2241-2 - 23084154.md
@@ -9,7 +9,8 @@ alinéa du II de l'article 529-4 du code de procédure pénale en avisent sans d
 judiciaire territorialement compétent. 
 
 Pendant le temps nécessaire à l'information et à la décision de l'officier de police judiciaire, le contrevenant est tenu de
-demeurer à la disposition d'un agent visé au même premier alinéa. 
+demeurer à la disposition d'un agent visé au même premier alinéa. La violation de cette obligation est punie de deux mois
+d'emprisonnement et de 7 500 € d'amende. 
 
 Sur l'ordre de l'officier de police judiciaire, les agents peuvent conduire l'auteur de l'infraction devant lui ou bien le
 retenir le temps nécessaire à son arrivée ou à celle d'un agent de police judiciaire agissant sous son contrôle.
@@ -22,9 +23,9 @@ retenir le temps nécessaire à son arrivée ou à celle d'un agent de police ju
 
 	**Modifié par**:
 
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 15
+	  - Loi n°2016-339 du 22 mars 2016 - art. 16
 
 	**Cite**:
 
-	  - Code de procédure pénale - art. 529-4 (M)
+	  - Code de procédure pénale - art. 529-4 (V)
 	  - Code des transports - art. L2241-1
