--- a/01. PARTIE LEGISLATIVE/Article L2241-6 - 23084144.md
+++ b/01. PARTIE LEGISLATIVE/Article L2241-6 - 23084144.md
@@ -1,14 +1,16 @@
 # Article L2241-6
 
-Toute personne qui contrevient aux dispositions tarifaires ou à des dispositions dont l'inobservation est susceptible soit de
-compromettre la sécurité des personnes ou la régularité des circulations, soit de troubler l'ordre public peut se voir
-enjoindre par les agents mentionnés au I de l'article L. 2241-1 de descendre du véhicule de transport ferroviaire ou routier
-au premier point d'arrêt suivant la constatation des faits ou de quitter sans délai les espaces, gares ou stations gérés par
-l'exploitant du réseau de transport public. 
+Toute personne qui contrevient aux dispositions tarifaires, à l'article L. 2241-10 ou à des dispositions dont l'inobservation
+est susceptible soit de compromettre la sécurité des personnes ou la régularité des circulations, soit de troubler l'ordre
+public, ainsi que toute personne qui refuse de se soumettre à l'inspection visuelle ou à la fouille de ses bagages ou aux
+palpations de sécurité peut se voir interdire par les agents mentionnés au I de l'article L. 2241-1 l'accès au véhicule de
+transport, même munie d'un titre de transport valide. Le cas échéant, elle peut se voir enjoindre par ces mêmes agents de
+descendre du véhicule de transport ferroviaire ou routier au premier point d'arrêt suivant la constatation des faits ou de
+quitter sans délai les espaces, gares ou stations gérés par l'exploitant du réseau de transport public. 
 
-En cas de refus d'obtempérer, les agents spécialement désignés par l'exploitant peuvent contraindre l'intéressé à descendre
-du véhicule ou à quitter sans délai les espaces, gares ou stations et, en tant que de besoin, requérir l'assistance de la
-force publique. 
+En cas de refus d'obtempérer, les agents spécialement désignés par l'exploitant peuvent interdire à l'intéressé l'accès du
+véhicule ou le contraindre à en descendre ou à quitter sans délai les espaces, gares ou stations et, en tant que de besoin,
+requérir l'assistance de la force publique. 
 
 Ils informent de cette mesure, sans délai et par tout moyen, un officier de police judiciaire territorialement compétent. 
 
@@ -19,7 +21,8 @@ santé.
 
 	**Modifié par**:
 
-	  - Loi n°2011-267 du 14 mars 2011 - art. 59
+	  - Loi n°2016-339 du 22 mars 2016 - art. 11
+	  - Loi n°2016-339 du 22 mars 2016 - art. 21
 
 	**Cité par**:
 
@@ -29,6 +32,7 @@ santé.
 	**Cite**:
 
 	  - Code des transports - art. L2241-1
+	  - Code des transports - art. L2241-10
 
 	**Codifié par**:
 
