--- a/01. PARTIE LEGISLATIVE/Article L2251-1 - 23084113.md
+++ b/01. PARTIE LEGISLATIVE/Article L2251-1 - 23084113.md
@@ -5,7 +5,16 @@ transports parisiens sont autorisées à disposer d'un service interne de sécur
 
 Les services internes de sécurité de la SNCF et de la Régie autonome des transports parisiens sont chargés, dans le cadre
 d'une mission de prévention, de veiller à la sécurité des personnes et des biens, de protéger les agents de l'entreprise et
-son patrimoine et de veiller au bon fonctionnement du service. 
+son patrimoine et de veiller au bon fonctionnement du service. La prévention des violences et des atteintes à caractère
+sexiste dans les transports publics est un axe prioritaire de leur action. 
+
+Outre la formation initiale dont ils bénéficient, les agents des services internes de sécurité de la SNCF et de la Régie
+autonome des transports parisiens reçoivent une formation continue adaptée aux besoins des services, en vue de maintenir ou
+de parfaire leur qualification professionnelle, leur connaissance des règles déontologiques et leur adaptation aux fonctions
+qu'ils sont conduits à exercer. 
+
+Le contenu de ces formations est conforme à un cahier des charges fixé par arrêté conjoint du ministre de l'intérieur et du
+ministre chargé des transports.
 
 Les services internes de sécurité de la SNCF et de la Régie autonome des transports parisiens sont soumis aux dispositions
 des articles L. 612-2 et L. 612-4 du code de la sécurité intérieure. 
@@ -32,9 +41,10 @@ parisiens peuvent exercer ces missions sur la voie publique sont fixées par dé
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 23
+	  - Loi n°2016-339 du 22 mars 2016 - art. 22
+	  - Loi n°2016-339 du 22 mars 2016 - art. 3
 
 	**Cite**:
 
-	  - Code de la sécurité intérieure - art. L612-2 (V)
+	  - Code de la sécurité intérieure - art. L612-2
 	  - Code de la sécurité intérieure - art. L612-4
