--- a/01. PARTIE LEGISLATIVE/Article L2251-3 - 23084109.md
+++ b/01. PARTIE LEGISLATIVE/Article L2251-3 - 23084109.md
@@ -2,9 +2,16 @@
 
 La tenue et la carte professionnelle dont les agents des services internes de sécurité de la SNCF et de la Régie autonome des
 transports parisiens sont obligatoirement porteurs dans l'exercice de leurs fonctions ne doivent entraîner aucune confusion
-avec celles des autres agents des services publics, notamment des services de police.
+avec celles des autres agents des services publics, notamment des services de police. 
 
-Les cas exceptionnels dans lesquels ils peuvent être dispensés du port de la tenue sont fixés par voie réglementaire.
+Par dérogation au premier alinéa, ces agents peuvent être dispensés du port de la tenue dans l'exercice de leurs fonctions. 
+
+En cas d'intervention, ces agents sont porteurs, de façon visible, de l'un des moyens matériels d'identification dont ils
+sont dotés, qui ne doit entraîner aucune confusion avec les moyens utilisés par les autres agents des services publics. 
+
+Ils présentent leur carte professionnelle à quiconque en fait la demande. 
+
+Les conditions d'application du présent article sont fixées par voie réglementaire.
 
 **Liens relatifs à cet article**
 
@@ -12,11 +19,11 @@ Les cas exceptionnels dans lesquels ils peuvent être dispensés du port de la t
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
-	**Modifié par**:
-
-	  - Loi n°2014-872 du 4 août 2014 - art. 23
-
 	**Cité par**:
 
 	  - Décret n°2015-845 du 10 juillet 2015 - art. 2 (V)
 	  - Décret n°2016-1281 du 28 septembre 2016 (V)
+
+	**Modifié par**:
+
+	  - Loi n°2016-339 du 22 mars 2016 - art. 4
