--- a/02. PARTIE REGLEMENTAIRE/Article R3121-22 - 30048473.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3121-22 - 30048473.md
@@ -1,19 +1,22 @@
 # Article R3121-22
 
-Le tarif maximum d'une course de taxi est fixé par le décret n° 87-238 du 6 avril 1987 réglementant les tarifs des courses de
-taxi pris en application de l'article L. 410-2 du code de commerce.
+Le tarif maximum d'une course de taxi est fixé par le décret n° 2015-1252 du 7 octobre 2015 relatif aux tarifs des courses
+des taxis.
+
+**Nota:**
+
+A l'article 3 du décret n° 2016-335 du 21 mars 2016, il convient de lire "Art. R3121-22" au lieu de "Art. R3131-22"
 
 **Liens relatifs à cet article**
-
-	**Cite**:
-
-	  - Décret n°87-238 du 6 avril 1987 (V)
-	  - Code de commerce - art. L410-2 (M)
 
 	**Codifié par**:
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Cite**:
 
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
+	  - Décret n°2015-1252 du 7 octobre 2015 (V)
+
+	**Modifié par**:
+
+	  - Décret n°2016-335 du 21 mars 2016 - art. 3
