--- a/02. PARTIE REGLEMENTAIRE/Article R3121-5 - 30048431.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3121-5 - 30048431.md
@@ -4,10 +4,8 @@ L'autorité compétente pour délivrer les autorisations de stationnement fixe, 
 stationnement offertes à l'exploitation dans la ou les zones de sa compétence et délimite le périmètre du ou des ressorts
 géographiques de ces autorisations. Le nombre d'autorisations de stationnement est rendu public. 
 
-L'autorité compétente communique au gestionnaire du registre de disponibilité des taxis les informations mentionnées au
-premier alinéa dans un délai d'un mois suivant la transaction. 
-
-La délivrance, le renouvellement et le retrait de chaque autorisation de stationnement font l'objet d'un arrêté. 
+L'autorité compétente communique, par voie électronique, au gestionnaire du registre de disponibilité des taxis mentionné à
+l'article L. 3121-11-1 les informations mentionnées au premier alinéa dans un délai d'un mois suivant la transaction. 
 
 L'augmentation du nombre d'autorisations de stationnement offertes à l'exploitation ainsi que le retrait définitif d'une
 autorisation de stationnement ou son non-renouvellement donne lieu, dans un délai de trois mois, à la délivrance de nouvelles
@@ -19,10 +17,6 @@ autorisations dans les conditions prévues au III de l'article R. 3121-13.
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
-	**Créé par**:
-
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
-
 	**Cité par**:
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art. 9 (V)
@@ -31,6 +25,11 @@ autorisations dans les conditions prévues au III de l'article R. 3121-13.
 	  - Code des transports - art. R3121-25 (V)
 	  - Code des transports - art. R3121-9 (V)
 
+	**Modifié par**:
+
+	  - Décret n°2016-335 du 21 mars 2016 - art. 2
+
 	**Cite**:
 
-	  - Code des transports - art. R3121-13 (V)
+	  - Code des transports - art. L3121-11-1 (V)
+	  - Code des transports - art. R3121-13
