--- a/01. PARTIE LEGISLATIVE/Article L2241-1-1 - 29333658.md
+++ b/01. PARTIE LEGISLATIVE/Article L2241-1-1 - 29333658.md
@@ -4,16 +4,19 @@ Dans l'exercice de leurs missions de sécurisation des personnes et des biens da
 voie ferrée ou guidée, les agents de la police nationale et les militaires de la gendarmerie nationale accèdent librement aux
 trains en circulation sur le territoire français. 
 
+Dans l'exercice de leurs missions de recherche de la fraude prévues par le code des douanes, les agents des douanes accèdent
+librement aux trains en circulation sur le territoire français. 
+
 Les modalités d'application du présent article sont fixées par décret.
 
 **Liens relatifs à cet article**
-
-	**Créé par**:
-
-	  - Loi n°2014-872 du 4 août 2014 - art. 21
 
 	**Cité par**:
 
 	  - Décret n°2015-1759 du 24 décembre 2015 - art. 1 (V)
 	  - Décret n°2016-903 du 1er juillet 2016 - art. 1 (V)
 	  - Code des transports - art. L2242-9 (VD)
+
+	**Modifié par**:
+
+	  - Loi n°2016-339 du 22 mars 2016 - art. 21
