--- a/01. PARTIE LEGISLATIVE/Article L2241-5 - 23084146.md
+++ b/01. PARTIE LEGISLATIVE/Article L2241-5 - 23084146.md
@@ -1,15 +1,18 @@
 # Article L2241-5
 
-Les agents mentionnés au I de l'article L. 2241-1 peuvent appréhender, en vue de leur confiscation par le tribunal, les
-marchandises de toute nature offertes, mises en vente ou exposées en vue de la vente dans les trains, cours ou bâtiments des
-gares, stations et toutes dépendances du domaine public ferroviaire sans l'autorisation administrative nécessaire. Ils
-peuvent également saisir dans les mêmes conditions les étals supportant ces marchandises. 
+Les agents mentionnés au I de l'article L. 2241-1 peuvent constater par procès-verbal le délit prévu à l'article 446-1 du
+code pénal lorsqu'il est commis dans les véhicules et emprises immobilières des transports publics de voyageurs. 
+
+Les agents mentionnés au premier alinéa du présent article peuvent appréhender, en vue de leur confiscation par le tribunal,
+les marchandises de toute nature offertes, mises en vente ou exposées en vue de la vente dans les véhicules et emprises
+immobilières des transports publics de voyageurs sans l'autorisation administrative nécessaire. Ils peuvent également saisir
+dans les mêmes conditions les étals supportant ces marchandises. 
 
 Les marchandises saisies sont détruites lorsqu'il s'agit de denrées impropres à la consommation. Elles sont remises à des
 organisations caritatives ou humanitaires d'intérêt général lorsqu'il s'agit de denrées périssables. 
 
 Il est rendu compte à l'officier de police judiciaire compétent de la saisie des marchandises et de leur destruction ou de
-leur remise aux organisations mentionnées au deuxième alinéa.
+leur remise aux organisations mentionnées au troisième alinéa.
 
 **Liens relatifs à cet article**
 
@@ -19,13 +22,14 @@ leur remise aux organisations mentionnées au deuxième alinéa.
 	  - Décret n°2016-541 du 3 mai 2016 - art. 21 (V)
 	  - Code des transports - art. L3114-1 (V)
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi du 15 juillet 1845 - art. 23-1 (Ab)
+	  - Loi n°2016-339 du 22 mars 2016 - art. 14
 
 	**Cite**:
 
-	  - Code des transports - art. L2241-1 (V)
+	  - Code pénal - art. 446-1
+	  - Code des transports - art. L2241-1
 
 	**Codifié par**:
 
