--- a/01. PARTIE LEGISLATIVE/Article L2242-5 - 23084128.md
+++ b/01. PARTIE LEGISLATIVE/Article L2242-5 - 23084128.md
@@ -1,17 +1,17 @@
 # Article L2242-5
 
-Est puni de 3 750 € d'amende le fait de déclarer intentionnellement une fausse adresse ou une fausse identité auprès des
-agents assermentés mentionnés au I de l'article L. 2241-1.
+Est puni de deux mois d'emprisonnement et de  3 750 € d'amende le fait de déclarer intentionnellement une fausse adresse ou
+une fausse identité auprès des agents assermentés mentionnés au I de l'article L. 2241-1.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi du 15 juillet 1845 - art. 23 (VT), alinéa 1, phrase 3
+	  - Loi n°2016-339 du 22 mars 2016 - art. 21
 
 	**Cite**:
 
-	  - Code des transports - art. L2241-1 (V)
+	  - Code des transports - art. L2241-1
 
 	**Cité par**:
 
