--- a/01. PARTIE LEGISLATIVE/Article L2252-1 - 23084099.md
+++ b/01. PARTIE LEGISLATIVE/Article L2252-1 - 23084099.md
@@ -1,31 +1,22 @@
 # Article L2252-1
 
-I. ― Est puni de trois ans d'emprisonnement et de 45 000 € d'amende le fait, pour les personnes mentionnées à l'article L.
-2251-1 : 
+I. (Abrogé) 
 
-1° De commettre l'un des agissements mentionnés à l'article 4 de la loi n° 83-629 du 12 juillet 1983 réglementant les
-activités privées de sécurité ; 
-
-2° De sous-traiter l'exercice d'une activité mentionnée à l'article 1er de la même loi à une entreprise dépourvue de
-l'autorisation prévue par son article 7. 
-
-II. ― Est puni d'un an d'emprisonnement et de 15 000 € d'amende le fait, pour les personnes mentionnées à l'article L.
+II. - Est puni d'un an d'emprisonnement et de 15 000 € d'amende le fait, pour les personnes mentionnées à l'article L.
 2251-1, d'employer une personne en violation des dispositions de l'article L. 2251-2. 
 
-III. ― Est puni de six mois d'emprisonnement et de 7 500 € d'amende le fait d'être l'employé du service mentionné à l'article
+III. - Est puni de six mois d'emprisonnement et de 7 500 € d'amende le fait d'être l'employé du service mentionné à l'article
 L. 2251-1 en violation des dispositions de l'article L. 2251-2.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°83-629 du 12 juillet 1983 - art. 14-2 (Ab)
+	  - Loi n°2016-339 du 22 mars 2016 - art. 3
 
 	**Cite**:
 
-	  - Loi n°83-629 du 12 juillet 1983 - art. 4
-	  - Code des transports - art. L2251-1 (V)
-	  - Code des transports - art. L2251-2 (V)
+	  - Code des transports - art. L2251-2
 
 	**Codifié par**:
 
