--- a/01. PARTIE LEGISLATIVE/Article L3116-1 - 31960751.md
+++ b/01. PARTIE LEGISLATIVE/Article L3116-1 - 31960751.md
@@ -1,11 +1,11 @@
 # Article L3116-1
 
-Les dispositions des 1°, 4° et 5° du I et du II de l'article L. 2241-1 et des articles L. 2241-2 à L. 2241-7, sauf celles de
-l'article L. 2241-5, sont applicables aux services de transport public routier de personnes réguliers et à la demande, y
-compris aux aménagements où ces services déposent et prennent en charge des passagers.
+Les 1°, 4°, 5° et 6° du I et le II de l'article L. 2241-1 les articles L. 2241-2 à L. 2241-7, à l'exception de l'article L.
+2241-5, et l'article L. 2241-10 sont applicables aux services de transport public routier de personnes réguliers et à la
+demande, y compris aux aménagements où ces services déposent et prennent en charge des passagers.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2016-79 du 29 janvier 2016 - art. 4
+	  - Loi n°2016-339 du 22 mars 2016 - art. 11
