--- a/01. PARTIE LEGISLATIVE/Article L5332-6 - 23080575.md
+++ b/01. PARTIE LEGISLATIVE/Article L5332-6 - 23080575.md
@@ -14,8 +14,8 @@ Sont également habilités à procéder à ces visites, sous le contrôle des of
 douanes, les agents de nationalité française ou ressortissants d'un autre Etat membre de l'Union européenne, que les services
 de l'Etat, les exploitants d'installations portuaires, les compagnies de transport maritime, les prestataires de services
 portuaires désignent pour cette tâche. Ces agents sont agréés par l'autorité administrative et par le procureur de la
-République. Ils ne procèdent à la fouille des bagages à main qu'avec le consentement de leur propriétaire et à des palpations
-de sécurité qu'avec le consentement de la personne. Dans ce cas, la palpation de sécurité est faite par une personne du même
+République. Ils ne procèdent à la fouille des bagages qu'avec le consentement de leur propriétaire et à des palpations de
+sécurité qu'avec le consentement de la personne. Dans ce cas, la palpation de sécurité est faite par une personne du même
 sexe que la personne qui en fait l'objet. Ils peuvent procéder à des contrôles des transports de marchandises visant à
 détecter une présence humaine sans pénétrer eux-mêmes à l'intérieur des véhicules ou de leur chargement.
 
@@ -39,13 +39,13 @@ cas d'urgence, il peut faire l'objet d'une suspension immédiate.
 	  - Code des transports - art. L5336-8 (V)
 	  - Code des transports - art. R5332-46 (V)
 
+	**Modifié par**:
+
+	  - Loi n°2016-339 du 22 mars 2016 - art. 1
+
 	**Cite**:
 
 	  - Code de procédure pénale - art. 21
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. L321-5 (Ab)
 
 	**Codifié par**:
 
