--- a/01. PARTIE LEGISLATIVE/Article L3111-6 - 23083996.md
+++ b/01. PARTIE LEGISLATIVE/Article L3111-6 - 23083996.md
@@ -7,13 +7,9 @@ conventions sont informées de cette substitution par l'autorité organisatrice 
 
 **Liens relatifs à cet article**
 
-	**Modifié par**:
-
-	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
-
 	**Cite**:
 
-	  - Code des transports - art. L3111-5 (V)
+	  - Code des transports - art. L3111-5
 
 	**Codifié par**:
 
