--- a/01. PARTIE LEGISLATIVE/Article L6322-2 - 23078171.md
+++ b/01. PARTIE LEGISLATIVE/Article L6322-2 - 23078171.md
@@ -11,24 +11,23 @@ minimum en termes d'investissements et d'objectifs de qualité de service, sur l
 Cet avenant met le contrat en conformité avec les dispositions d'un cahier des charges type approuvé par le décret prévu par
 l'article L. 6322-1. 
 
-Les deuxième à cinquième alinéas de l'article 38 et les deuxième à quatrième alinéas de l'article 40 de la loi n° 93-122 du
-29 janvier 1993 relative à la prévention de la corruption et à la transparence de la vie économique et des procédures
-publiques ne sont pas applicables aux opérations prévues par le premier alinéa.
+Les dispositions de l'ordonnance n° 2016-65 du 29 janvier 2016 relative aux contrats de concession s'appliquent aux
+opérations prévues par le premier alinéa.
 
 **Liens relatifs à cet article**
 
 	**Cite**:
 
-	  - Loi n°93-122 du 29 janvier 1993 - art. 40 (V)
-	  - Code général des collectivités territoriales - art. L2253-1 (V)
-	  - Code général des collectivités territoriales - art. L3231-6 (V)
-	  - Code général des collectivités territoriales - art. L4211-1 (V)
-	  - Code général des collectivités territoriales - art. L5111-4 (V)
-	  - Code des transports - art. L6322-1 (V)
+	  - Ordonnance n°2016-65 du 29 janvier 2016
+	  - Code général des collectivités territoriales - art. L2253-1
+	  - Code général des collectivités territoriales - art. L3231-6
+	  - Code général des collectivités territoriales - art. L4211-1
+	  - Code général des collectivités territoriales - art. L5111-4
+	  - Code des transports - art. L6322-1
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2005-357 du 20 avril 2005 - art. 7 (Ab), alinéa 2, cession ou apport de la concession à une société à participation publique
+	  - Ordonnance n°2016-65 du 29 janvier 2016 - art. 74
 
 	**Cité par**:
 
