--- a/01. PARTIE LEGISLATIVE/Article L2111-11 - 23084710.md
+++ b/01. PARTIE LEGISLATIVE/Article L2111-11 - 23084710.md
@@ -1,11 +1,10 @@
 # Article L2111-11
 
 Sauf s'il est fait application de l'article L. 2111-12, SNCF Réseau peut recourir, pour des projets contribuant au
-développement, à l'aménagement et à la mise en valeur de l'infrastructure du réseau ferré national, à une concession de
-travaux prévue par l'ordonnance n° 2009-864 du 15 juillet 2009 relative aux contrats de concession de travaux publics, à un
-contrat de partenariat conclu sur le fondement des dispositions de l'ordonnance n° 2004-559 du 17 juin 2004 sur les contrats
-de partenariat ou à une convention de délégation de service public prévue par la loi n° 93-122 du 29 janvier 1993 relative à
-la prévention de la corruption et à la transparence de la vie économique et des procédures publiques. 
+développement, à l'aménagement et à la mise en valeur de l'infrastructure du réseau ferré national, à une concession prévue
+par l'ordonnance n° 2009-864 du 15 juillet 2009 relative aux contrats de concession de travaux publics, à un contrat de
+partenariat conclu sur le fondement des dispositions de l'ordonnance n° 2004-559 du 17 juin 2004 sur les contrats de
+partenariat.
 
 La concession, le contrat ou la convention peut porter sur tout ou partie des missions assurées par SNCF Réseau, à
 l'exception de la gestion opérationnelle des circulations. La concession, le contrat ou la convention comporte des
@@ -55,4 +54,4 @@ ou à une personne de droit privé, une mission portant à la fois sur l'établi
 
 	**Modifié par**:
 
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 2
+	  - Ordonnance n°2016-65 du 29 janvier 2016 - art. 74
