--- a/01. PARTIE LEGISLATIVE/Article L2111-12 - 23084707.md
+++ b/01. PARTIE LEGISLATIVE/Article L2111-12 - 23084707.md
@@ -1,7 +1,7 @@
 # Article L2111-12
 
-L'Etat peut recourir directement au contrat ou à la convention mentionnés à l'article L. 2111-11 dans les mêmes conditions et
-pour le même objet. Dans ce cas, il peut demander à SNCF Réseau de l'assister pour toute mission à caractère technique,
+L'Etat peut recourir directement au contrat ou  à la concession  mentionnés à l'article L. 2111-11 dans les mêmes conditions
+et pour le même objet. Dans ce cas, il peut demander à SNCF Réseau de l'assister pour toute mission à caractère technique,
 administratif, juridique ou financier intéressant la conclusion ou l'exécution du contrat ou de la convention. 
 
 Les rapports entre l'Etat et SNCF Réseau ne sont pas régis par la loi n° 85-704 du 12 juillet 1985 relative à la maîtrise
@@ -14,6 +14,7 @@ Les modalités d'application du présent article sont fixées par voie réglemen
 	**Cite**:
 
 	  - Loi n°85-704 du 12 juillet 1985
+	  - Code des transports - art. L2111-11 (VD)
 
 	**Codifié par**:
 
@@ -25,9 +26,8 @@ Les modalités d'application du présent article sont fixées par voie réglemen
 	  - Arrêté du 12 août 2008 - art. 2 (M)
 	  - Décret n°2015-844 du 10 juillet 2015 - art. 2 (V)
 	  - Décret n°2017-694 du 2 mai 2017 - art. 2 (VD)
-	  - Code des transports - art. L2111-11 (VD)
 	  - Code des transports - art. L2111-3 (M)
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 6
+	  - Ordonnance n°2016-65 du 29 janvier 2016 - art. 74
