--- a/01. PARTIE LEGISLATIVE/Article L4312-3-2 - 25196469.md
+++ b/01. PARTIE LEGISLATIVE/Article L4312-3-2 - 25196469.md
@@ -107,9 +107,9 @@ huit jours à compter de la date de notification de l'accord, dans les condition
 
 En application du IV de l'article 8 bis de la loi n° 83-634 du 13 juillet 1983 précitée, un accord est valide, pour les
 personnels mentionnés au 1° de l'article L. 4312-3-1 du présent code, s'il est signé par une ou plusieurs organisations
-syndicales de fonctionnaires ayant recueilli au moins 50 % du nombre des voix lors des dernières élections au comité
-technique. Le présent alinéa est également applicable pour déterminer la validité des accords pour les personnels mentionnés
-aux 2° et 3° du même article L. 4312-3-1. 
+syndicales de fonctionnaires ayant recueilli au moins 50 %   des suffrages exprimés en faveur des organisations habilitées à
+négocier lors des dernières élections au comité technique. Le présent alinéa est également applicable pour déterminer la
+validité des accords pour les personnels mentionnés aux 2° et 3° du même article L. 4312-3-1. 
 
 VI. ― Chaque syndicat qui constitue, en application de l'article L. 2142-1 du code du travail, une section syndicale au sein
 de l'établissement peut, s'il n'est pas représentatif dans l'établissement, désigner un représentant de la section pour le
@@ -142,13 +142,13 @@ ministériel du ministère chargé du développement durable.
 	  - Loi n°84-16 du 11 janvier 1984 - art. 16
 	  - Code du travail - art. L2122-1
 	  - Code du travail - art. L2142-1
-	  - Code du travail - art. L2231-8 (V)
+	  - Code du travail - art. L2231-8
 	  - Code du travail - art. L2323-1
 	  - Code du travail - art. L2324-4
 	  - Code du travail - art. L2325-1
 	  - Code du travail - art. L2325-22
 	  - Code des transports - art. L4312-3-1
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2012-77 du 24 janvier 2012 - art. 2
+	  - Loi n°2016-483 du 20 avril 2016 - art. 57
