--- a/02. PARTIE REGLEMENTAIRE/Article R1112-13 - 29711358.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1112-13 - 29711358.md
@@ -31,8 +31,10 @@ les établissements recevant du public, la liste des points susceptibles de fair
 par l'article R. 111-19-10 du code de la construction et de l'habitation ; 
 
 4° La programmation présentant, sur chacune des périodes et sur chacune des années de la première période, le début et la fin
-prévisionnels des actions de mise en accessibilité de chaque point d'arrêt prioritaire et les engagements des maîtres
-d'ouvrage, ou à défaut, les actions nécessaires et les personnes qui sont susceptibles d'en assurer la charge ; 
+prévisionnels des actions de mise en accessibilité de chaque point d'arrêt prioritaire et le cas échéant de chaque point
+d'arrêt figurant dans la liste complémentaire établie en application des dispositions de l'article D. 1112-9 et les
+engagements des maîtres d'ouvrage, ou à défaut, les actions nécessaires et les personnes qui sont susceptibles d'en assurer
+la charge ; 
 
 5° L'estimation financière de la mise en accessibilité ainsi que la répartition de ces coûts sur chaque période et sur chaque
 année de la première période et les concours financiers prévus des différents financeurs, ou, à défaut, les financements
@@ -63,9 +65,9 @@ pour chacun du ou des services de transport concernés.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1321 du 4 novembre 2014 - art. 1
+	  - Décret n°2016-529 du 27 avril 2016 - art. 2
 
 	**Cite**:
 
