--- a/02. PARTIE REGLEMENTAIRE/Article R1112-11 - 29711352.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1112-11 - 29711352.md
@@ -9,14 +9,15 @@ II.-L'autorité administrative qui, en application des dispositions du III de l'
 directeur d'accessibilité-agenda d'accessibilité programmée prend les décisions relatives à la prorogation du délai de mise
 en œuvre de ce schéma prévue à l'article L. 1112-2-3, celles relatives aux sanctions prévues au II de l'article L. 1112-2-4
 ainsi que celles relatives à la procédure de carence et aux sanctions prévues au III du même article. Les sanctions prévues
-par le deuxième alinéa du I de l'article L. 1112-2-4 sont prononcées par le représentant de l'Etat de chacun des départements
-concernés par le schéma, et, pour les services ferroviaires d'intérêt national, par le ministre chargé des transports.
+par le deuxième alinéa du I de l'article L. 1112-2-4 sont prononcées par l'autorité administrative qui, en application du III
+de l'article L. 1112-2-1, a approuvé le schéma directeur d'accessibilité-agenda d'accessibilité programmée, et, pour les
+services ferroviaires d'intérêt national, par le ministre chargé des transports.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1321 du 4 novembre 2014 - art. 1
+	  - Décret n°2016-529 du 27 avril 2016 - art. 2
 
 	**Cite**:
 
