--- a/02. PARTIE REGLEMENTAIRE/Article R1112-17 - 29711373.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1112-17 - 29711373.md
@@ -1,11 +1,13 @@
 # Article R1112-17
 
 I.-Un schéma directeur d'accessibilité-agenda d'accessibilité programmée ne peut être approuvé que si les travaux et actions
-prévus pour assurer l'accessibilité des points d'arrêt prioritaires des services de transport sont conformes aux règles
-d'accessibilité qui leur sont applicables et s'il ressort de la présentation des travaux et actions à réaliser pour
-l'accessibilité des bâtiments et installations associés aux points d'arrêt prioritaires des services de transport
-ferroviaire, qu'ils devraient permettre d'assurer la conformité aux règles d'accessibilité aux personnes handicapées qui leur
-sont respectivement applicables. 
+prévus pour assurer l'accessibilité des points d'arrêt prioritaires des services de transport et le cas échéant de chaque
+point d'arrêt figurant dans la liste complémentaire établie en application des dispositions de l'article D. 1112-9 sont
+conformes aux règles d'accessibilité qui leur sont applicables et s'il ressort de la présentation des travaux et actions à
+réaliser pour l'accessibilité des bâtiments et installations associés aux points d'arrêt prioritaires des services de
+transport ferroviaire et le cas échéant de chaque point d'arrêt figurant dans la liste complémentaire établie en application
+des dispositions de l'article D. 1112-9, qu'ils devraient permettre d'assurer la conformité aux règles d'accessibilité aux
+personnes handicapées qui leur sont respectivement applicables. 
 
 II.-Lorsque le dossier de demande d'approbation du schéma directeur d'accessibilité-agenda d'accessibilité programmée n'a pas
 été déposé dans le délai imparti, que ce délai résulte des dispositions générales ou d'une décision individuelle, et que ce
@@ -14,6 +16,6 @@ d'exécution de ce schéma.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1321 du 4 novembre 2014 - art. 1
+	  - Décret n°2016-529 du 27 avril 2016 - art. 2
