--- a/02. PARTIE REGLEMENTAIRE/Article R1112-22 - 29711387.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1112-22 - 29711387.md
@@ -5,8 +5,7 @@ l'autorité qui l'a approuvé, par pli recommandé avec demande d'avis de récep
 
 1° A l'issue de la première année, un point de situation ; 
 
-2° A l'issue de chaque période intermédiaire, un bilan des actions nécessaires à la mise en accessibilité qui ont été
-effectuées. 
+2° A l'issue de chaque période, un bilan des actions nécessaires à la mise en accessibilité qui ont été effectuées. 
 
 Lorsque le schéma directeur d'accessibilité-agenda d'accessibilité programmée concerne un service de transport ferroviaire,
 ces bilans sont également adressés aux commissions pour l'accessibilité prévues à l'article L. 2143-3 du code général des
@@ -21,9 +20,9 @@ réglementaires et technologiques.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1321 du 4 novembre 2014 - art. 1
+	  - Décret n°2016-529 du 27 avril 2016 - art. 2
 
 	**Cité par**:
 
