--- a/02. PARTIE REGLEMENTAIRE/Article R3121-20 - 30048467.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3121-20 - 30048467.md
@@ -1,13 +1,19 @@
 # Article R3121-20
 
 Pour l'application du 2° de l'article L. 3121-9, la durée d'exercice minimal de la profession requise pour les ressortissants
-des autres Etats membres de l'Union européenne ou des Etats parties à l'accord sur l'Espace économique européen où un
-certificat de capacité professionnelle n'est pas exigé est de deux années consécutives à plein temps ou l'équivalent à temps
-partiel au cours des dix dernières années. 
+des autres Etats membres de l'Union européenne ou des Etats parties à l'accord sur l'Espace économique européen dans lesquels
+un certificat de capacité professionnelle n'est pas exigé est d'une année, accomplie dans un ou plusieurs Etats membres, à
+plein temps ou à temps partiel au cours des dix dernières années. 
 
-L'aptitude professionnelle requise pour la délivrance du certificat de capacité professionnelle mentionné au 1° de l'article
-L. 3121-9 est constatée par le préfet ou, dans sa zone de compétence, par le préfet de police, lorsque l'intéressé a passé
-avec succès les unités de valeur départementales de ce certificat.
+L'aptitude à exercer l'activité de conducteur de taxi mentionnée au 2° de l'article L. 3121-9 est constatée par le préfet ou,
+dans sa zone de compétence, par le préfet de police, lorsque le demandeur a, selon son choix, passé avec succès une épreuve
+d'aptitude ou accompli un stage d'adaptation. 
+
+Le demandeur est dispensé de cette épreuve ou de ce stage si les compétences qu'il a acquises au cours de son expérience
+professionnelle ou de sa formation continue couvrent la différence constatée entre la formation qu'il a reçue dans son Etat
+membre d'origine et les compétences requises pour l'exercice en France de l'activité de conducteur de taxi. 
+
+Les modalités d'application du présent article sont précisées par un arrêté du ministre de l'intérieur
 
 **Liens relatifs à cet article**
 
@@ -15,10 +21,14 @@ avec succès les unités de valeur départementales de ce certificat.
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
+	  - Décret n°2016-613 du 17 mai 2016 - art. 2
+
+	**Abrogé par**:
+
+	  - Décret n°2017-483 du 6 avril 2017 - art. 3
 
 	**Cite**:
 
-	  - Code des transports - art. L3121-9 (V)
+	  - Code des transports - art. L3121-9
