--- a/01. PARTIE LEGISLATIVE/Article L4412-1 - 23082814.md
+++ b/01. PARTIE LEGISLATIVE/Article L4412-1 - 23082814.md
@@ -3,14 +3,12 @@
 Les transporteurs de marchandises ou de personnes et les propriétaires de bateaux de plaisance d'une longueur supérieure à 5
 mètres ou dotés d'un moteur d'une puissance égale ou supérieure à 9,9 chevaux sont assujettis, dans des conditions fixées par
 décret en Conseil d'Etat, à des péages perçus au profit de Voies navigables de France lorsqu'ils naviguent sur le domaine
-public qui lui est confié, à l'exception des parties internationales du Rhin et de la Moselle. Le montant de ces péages est
+public qui lui est confié, à l'exception        de la partie internationale du Rhin et de la partie internationale de la
+Moselle au sens de l'article 1 de la convention signée le 27 octobre 1956 entre la République française, la République
+fédérale d'Allemagne et le Grand-Duché de Luxembourg au sujet de la canalisation de la Moselle. Le montant de ces péages est
 fixé par l'établissement.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°90-1168 du 29 décembre 1990 - art. 124 (Ab), alinéa 21
 
 	**Cité par**:
 
@@ -18,7 +16,7 @@ fixé par l'établissement.
 	  - Code des transports - art. L4316-1 (V)
 	  - Code des transports - art. L4412-2 (V)
 	  - Code des transports - art. L4412-3 (V)
-	  - Code des transports - art. L4462-4 (M)
+	  - Code des transports - art. L4462-4 (V)
 	  - Code des transports - art. L4611-2 (V)
 	  - Code des transports - art. L4621-2 (V)
 	  - Code des transports - art. L4631-2 (V)
@@ -28,6 +26,10 @@ fixé par l'établissement.
 	  - Code des transports - art. R4412-2 (V)
 	  - Code des transports - art. R4412-3 (V)
 	  - Code des transports - art. R4462-7 (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2016-665 du 25 mai 2016 - art. 2
 
 	**Codifié par**:
 
