--- a/01. PARTIE LEGISLATIVE/Article L4462-4 - 23082439.md
+++ b/01. PARTIE LEGISLATIVE/Article L4462-4 - 23082439.md
@@ -15,22 +15,27 @@ maritimes et des grands ports maritimes ;
 
 4° Les agents mentionnés à l'article L. 4272-1. 
 
-Ces personnels et agents sont commissionnés, dans la limite de leur circonscription et de leurs compétences respectives, par
-le ministre chargé des transports et assermentés dans des conditions prévues par décret en Conseil d'Etat. 
+Les personnels de Voies navigables de France mentionnés au 1° sont commissionnés par le directeur général de Voies navigables
+de France et assermentés dans des conditions fixées par décret en Conseil d'Etat.
 
-Ils constatent par procès-verbaux toute irrégularité commise dans l'acquittement des péages. Ils transmettent directement et
-sans délai leurs procès-verbaux, qui font foi jusqu'à preuve du contraire, au procureur de la République.
+Les personnels et agents mentionnés aux 2° à 4° sont commissionnés, dans la limite de leur circonscription et de leurs
+compétences respectives, par le ministre chargé des transports et assermentés dans des conditions prévues par décret en
+Conseil d'Etat. 
+
+Tous les personnels mentionnés au présent article constatent par procès-verbaux toute irrégularité commise dans
+l'acquittement des péages. Ils transmettent directement et sans délai leurs procès-verbaux, qui font foi jusqu'à preuve du
+contraire, au procureur de la République.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°91-1385 du 31 décembre 1991 - art. 3 (Ab), alinéas 1 à 7
+	  - Ordonnance n°2016-665 du 25 mai 2016 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. L4272-1 (V)
-	  - Code des transports - art. L4316-10 (V)
+	  - Code des transports - art. L4272-1
+	  - Code des transports - art. L4316-10
 	  - Code des transports - art. L4412-1 (V)
 
 	**Cité par**:
