--- a/01. PARTIE LEGISLATIVE/Article L2132-1 - 23084521.md
+++ b/01. PARTIE LEGISLATIVE/Article L2132-1 - 23084521.md
@@ -1,29 +1,29 @@
 # Article L2132-1
 
-L'Autorité de régulation des activités ferroviaires et routières est compétente pour le réseau ferroviaire défini à l'article
-L. 2122-1, sous réserve des pouvoirs dévolus à la Commission intergouvernementale instituée par le traité entre la République
-française et le Royaume-Uni de Grande-Bretagne et d'Irlande du Nord, concernant la construction et l'exploitation par des
-sociétés privées concessionnaires d'une liaison fixe trans-Manche, signé le 12 février 1986.
+L'Autorité de régulation des activités ferroviaires et routières  est compétente pour le réseau ferroviaire défini à
+l'article L. 2122-1.
+
+**Nota:**
+
+Ordonnance n° 2015-855 du 15 juillet 2015 article 36 : Ces dispositions entrent en vigueur à la date de prise d'effet de
+l'abrogation du règlement de la Commission intergouvernementale concernant l'utilisation du tunnel sous la Manche signé à
+Londres le 23 juillet 2009 (15 juin 2016).
 
 **Liens relatifs à cet article**
 
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
-
 	**Modifié par**:
 
-	  - Ordonnance n°2016-79 du 29 janvier 2016 - art. 2
-
-	**Cite**:
-
-	  - Code des transports - art. L2122-1 (V)
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
 
 	**Anciens textes**:
 
-	  - Code des transports - art. L2131-5 (T)
+	  - Code des transports - art. L2131-5 (V)
 
 	**Cité par**:
 
-	  - Code des transports - art. L2132-2 (V)
+	  - Code des transports - art. L2132-2 (VD)
 	  - Code des transports - art. L2132-8-2 (Ab)
+
+	**Cite**:
+
+	  - Code des transports - art. L2135-7 (Ab)
